z-index fix

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ object {
 /* Content */
 #content {
 	position: relative;
-	z-index: -1;
+	z-index: 0;
 }
 .main-content-inner,
 .sidebar {
